new menu for desktop and mobile version

--- a/index.html
+++ b/index.html
@@ -10,12 +10,36 @@
   <link rel="stylesheet" href="./assets/css/index.css">
   <title>Developer Portfolio Design</title>
 </head>
+
 <body>
   <header class="container-width">
     <nav class="nav">
       <div class="nav-img">
         <h1 class="name">MARY</h1>
       </div>
+
+      <div class="desktop-menu">
+        <ul class="nav-list">
+          <li class="home nav-list-item">Home</li>
+          <li class="about nav-list-item"><a href="./about.html">About</a></li>
+          <li class="projects nav-list-item"><a href="./projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <div class="off-screen-menu">
+        <ul>
+          <li class="home nav-list-item">Home</li>
+          <li class="about nav-list-item"><a href="./about.html">About</a></li>
+          <li class="projects nav-list-item"><a href="./projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <div class="ham-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      
       <div class="socials-icons">
         <a href="https://github.com/marypope19">
           <img src="./assets/img/icons/nav-icons/github.svg" class="github-icon" alt="Github icon">
