--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <script src="./assets/js/menu.js" defer></script>
   <link rel="stylesheet" href="./assets/css/index.css">
   <title>Developer Portfolio Design</title>
 </head>
@@ -39,7 +40,7 @@
         <span></span>
         <span></span>
       </div>
-      
+
       <div class="socials-icons">
         <a href="https://github.com/marypope19">
           <img src="./assets/img/icons/nav-icons/github.svg" class="github-icon" alt="Github icon">
