add interactive menu to all pages

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/index.css">
+  <script src="./assets/js/menu.js" defer></script>
   <title>Developer Portfolio Design</title>
 </head>
 
@@ -17,6 +18,29 @@
       <div class="nav-img">
         <h1 class="name">MARY</h1>
       </div>
+
+      <div class="desktop-menu">
+        <ul class="nav-list">
+          <li class="home nav-list-item"><a href="./index.html">Home</a></li>
+          <li class="about nav-list-item">About</li>
+          <li class="projects nav-list-item"><a href="./projects.html">Projects</a></li>
+        </ul>
+      </div>
+
+      <div class="off-screen-menu">
+        <ul>
+          <li class="home nav-list-item"><a href="./index.html">Home</a></li>
+          <li class="about nav-list-item">About</li>
+          <li class="projects nav-list-item"><a href="./projects.html">Projects</a></li>
+        </ul>
+      </div>
+  
+      <div class="ham-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
       <div class="socials-icons">
         <a href="https://github.com/marypope19">
           <img src="./assets/img/icons/nav-icons/github.svg" class="github-icon" alt="Github icon">
