--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/index.css">
+  <script type="module" src="./assets/js/about.js"></script>
   <script src="./assets/js/menu.js" defer></script>
   <title>Developer Portfolio Design</title>
 </head>
