--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <script src="./assets/js/menu.js" defer></script>
+  <script src="./assets/js/slideshow.js" defer></script>
   <link rel="stylesheet" href="./assets/css/index.css">
   <title>Developer Portfolio Design</title>
 </head>
@@ -58,12 +59,42 @@
         for web</h1>
       <img src="./assets/img/profile.jpg" class="profile-photo" alt="Profile photo">
     </div>
+
+    <div class="slideshow-container">
+      <h2>My projects: </h2>
+      <div class="slides fade">
+        <div class="number">1 / 3</div>
+        <img src="./assets/img/projects/todolist.png" alt="To do list project">
+        <p class="text">Make a to do list <a href="projects.html">Click for details</a></p>
+      </div>
+
+      <div class="slides fade">
+        <div class="number">2 / 3</div>
+        <img src="./assets/img/projects/quizapp.png" alt="Quiz app project">
+        <p class="text">A quiz app <a href="projects.html">Click for details</a></p>
+      </div>
+
+      <div class="slides fade">
+        <div class="number">3 / 3</div>
+        <img src="./assets/img/projects/filmpage.png" alt="Film page project">
+        <p class="text">A simple film page <a href="projects.html">Click for details</a></p>
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+      <a class="next" onclick="plusSlides(1)">&#10095</a>
+    </div>
+    <br>
+
+    <div class="dots">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
   </main>
 
   <footer class="footer container-width">
     <p>Designed and built by <span class="footer-name">Mary Pope</span> with <span class="footer-text">Love &
         Tea</span></p>
   </footer>
-
 </body>
 </html>
