--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="container-width">
     <nav class="nav">
       <div class="nav-img">
-        <h1 class="name">MARY</h1>
+        <h2 class="name">MARY</h2>
       </div>
 
       <div class="desktop-menu">
@@ -80,8 +80,8 @@
         <p class="text">A simple film page <a href="projects.html">Click for details</a></p>
       </div>
 
-      <a class="prev" onclick="plusSlides(-1)">&#10094</a>
-      <a class="next" onclick="plusSlides(1)">&#10095</a>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
     <br>
 
